<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity Strings -->
    <string name="app_name">Latvian alternative keyboard</string>
    <string name="titleExtraRowKeyboard">Extra row keyboard</string>
    <string name="titleAltKeyKeyboard">Alt key keyboard</string>
    <string name="titleDancingKeyboard">Dancing keyboard</string>
    <string name="titleAbout">About</string>

    <!-- Extra row keyboard strings -->
    <string name="ime_name">Extra row keyboard</string>
    <string name="titleExtraRowPreferences">Extra Row Preferences</string>
    <string name="extraRowInKeyboardListItem0">Keyboard settings</string>
    <string name="extraRowInKeyboardListItem1">Input method</string>
    <string name="extraRowInKeyboardDialogTitle">Choose action</string>

    <!-- Extra row keyboard preference strings -->
    <string name="titleisHaptinOn">Vibration on keypress</string>
    <string name="sumisHapticOn">Default value: True</string>
    <string name="titleButtonHeight">Button height</string>
    <string name="sumButtonHeight">Choose the button height</string>
    <string name="titleWaitTime">Wait time</string>
    <string name="sumWaitTime">Time for pop-up and backspace</string>
    <string name="titleTextSize">Text size</string>
    <string name="sumTextSize">Letter size</string>
    <string name="titleBtnPadding">Button padding</string>
    <string name="sumBtnPadding">Space between buttons</string>
    <string name="titleBackgroundColor">Background color</string>
    <string name="sumBackgroundColor">Keyboard background color</string>
    <string name="titleButtonOk">Ok</string>
    <string name="titleButtonCancel">Cancel</string>
    <string name="titleKeyboardHeight">Keyboard height</string>
    <string name="titleVerticalHeight">Keyboard vertical height</string>
    <string name="sumVerticalHeight">How much percentage of screen keyboard takes</string>
    <string name="titleHorizontalKeyboard">Keyboard horizontal height</string>
    <string name="sumHorizontalHeight">How much percentage of screen keyboard takes</string>
    <string name="titleBtnBackground">Button color</string>
    <string name="titleBtnHoverColor">Button color on hover</string>
    <string name="titleBtnBorderColor">Button border color</string>
    <string name="titleBtnTextColor">Button text color</string>
    <string name="titleBtnRoundness">Button roundness</string>
    <string name="titleCallKeyboard">Test keyboard</string>
    <string name="sumCallKeyboard">Opens keyboard with selected preferences</string>
    <string name="titleResetDefaults">Reset</string>
    <string name="sumResetDefaults">Resets keyboard preferences to default values</string>
    <string name="sumBtnBackground">Choose button background color</string>
    <string name="sumBtnHoverColor">Buttons color when clicked</string>
    <string name="titleTextShadow">Text shadow</string>
    <string name="sumTextShadow">Text shadow color</string>
    <string name="titleBtnShadow">Button shadow</string>
    <string name="sumBtnShadow">Button shadow color when higher button padding is set</string>
    <string name="titleTextFont">Text font</string>
    <string name="sumTextFont">Keyboard letter font</string>
    <string name="titleCatVibration">Vibration</string>
    <string name="titleCatKeyboardHeight">Keyboard height</string>
    <string name="titleCatKeyboardPrefs">Keyboard settings</string>
    <string name="titleCatButtonPrefs">Button settings</string>
    <string name="titleCatTextPrefs">Text settings</string>
    <string name="titleCatOther">Other</string>
    <string name="titleCatHintsPrefs">Hint settings</string>
    <string name="titleHints">Hints</string>
    <string name="sumHints">Swich between secondary key pop-ups and key previews</string>
    <string name="titleHintTextSize">Text size</string>
    <string name="sumHintTextSize">Hint text size</string>
    <string name="titleHintTetColor">Text color</string>
    <string name="titleHintTextColor">Text Color</string>
    <string name="titleHintBackground">Background color</string>
    <string name="sumHintBackground">Hint background color</string>
    <string name="titleHintDelay">Delay</string>
    <string name="sumHintDelay">Hint delay</string>
    <string name="titleHintElevation">Hint elevation</string>

    <!-- Alt key keyboard strings -->
    <string name="ime_name2">Alt key keyboard</string>
    <string name="titleAltKeyPreferences">Alt Key Preferences</string>
    <string name="titleBorderWidth">Button border width</string>
    <string name="titleDefaultStyle">Default style</string>
    <string name="sumDefaultStyle">Uncheck to customize keyboard</string>
    <string name="titleSwitchSounds">Keyboard sound</string>
    <string name="sumSwitchSounds">If checked plays minion sounds on keypress</string>

    <!-- Font strings -->
    <string name="fontXoloniumRegular">Xolonium-Regular</string>
    <string name="fontGrandHotelRegular">GrandHotel-Regular</string>
    <string name="fontRobotoRegular">Roboto-Regular</string>
    <string name="fontPecita">Pecita</string>
    <string name="fontDPuntillasDToTiptoe">D-Puntillas-D-To-Tiptoe</string>
    <string name="fontMegrim">Megrim</string>
    <string name="fontJuraMedium">Jura-Medium</string>
    <string name="textDancingKeyboard">Dancing keyboard is a silent feature\n of Latvian keyboard\n\n Lauching it creates minigame that\n counts score and have a funny nano robot dancing. Lift up your mood by choosing this layout!</string>
    <string name="textAbout">Created by proud and hard working people of banania. First version release date: 2013 Q2. About app: Application represents the pinacle of software engineering by combining 3 world class applications in 1. Awsome Latvian keyboard, Cool alternative keyboard, and childish dancing keyboard. Thank you for choosing our app for your daily needs! </string>

</resources>
